samples/_failures_safe/1761504774_2a704d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5042a5a.c: In function ‘main’:
./samples/SAFE/__tmp_b5042a5a.c:142:24: error: expected ‘)’ at end of input
  142 |     addEdge(graph, 1, 2
      |            ~           ^
      |                        )
./samples/SAFE/__tmp_b5042a5a.c:142:5: error: too few arguments to function ‘addEdge’
  142 |     addEdge(graph, 1, 2
      |     ^~~~~~~
./samples/SAFE/__tmp_b5042a5a.c:38:6: note: declared here
   38 | void addEdge(struct Graph* graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_b5042a5a.c:142:5: error: expected declaration or statement at end of input
  142 |     addEdge(graph, 1, 2
      |     ^~~~~~~
